2007-02-19  Mickael Remond  <mickael.remond@process-one.net>

	* doc/api/*: Added Erlang documentation generation script (EJAB-188).
	* doc/version.tex: Updated.
	* src/ejabberd.app: Updated.

	* src/odbc/pg.sql: last table, state column cannot be NULL (EJAB-191).
	* src/odbc/mysql.sql: likewise.
	* src/odbc/mssql.sql. likewise.

	* src/ejabberd_auth_ldap.erl: prevent anonymous bind on LDAP servers
	as ejabberd is providing other anonymous authentication mechanism
	(EJAB-190).

	* src/cyrsasl_plain.erl: bad-auth error code replaced by not-authorized
	(EJAB-187).
	
	* src/aclocal.m4: configure --with-erlang option is now working (Thanks
	to Jerome Sautret) (EJAB-186).

	* src/mod_muc/mod_muc_log.erl: Spam prevention: The default behaviour 
	is now to use the nofollow rel attributes for links that are submitted
	by users (EJAB-185).
	* doc/guide.tex: Likewise.

	* src/mod_muc/mod_muc_room.erl: API improvement: Implementation of an
	event to destroy MUC room from an external application (Thanks to
    Massimiliano Mirra) (EJAB-184).

2007-02-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Confirm to RFC3920 section 10.3 (thanks to
	Jerome Sautret)

2007-02-18  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc.erl: Node now try to clean its own online room
	when restarting (EJAB-182).

2007-02-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Clean online room table on cluster node
	restart

2007-02-13  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_ldap.erl: Added ldap_local_filter option. This
	option provide an optimisation to reduce LDAP directory load when
	using attribute-based filters.

2007-02-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Added separate version of
	element_to_string for HTML encoding
	* src/xml.erl: Reverted previous change

2007-02-04  Mickael Remond  <mickael.remond@process-one.net>
